Add section for D2

--- a/pages/index.html
+++ b/pages/index.html
@@ -125,6 +125,19 @@
 		</div>
 	</li>
 </ul>
+<h3><a href="http://us.blizzard.com/en-us/games/d2/" class="info-link">Diablo II</a> Tools</h3>
+<ul class="project-list">
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/d2info">d2info</a>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/d2itemreader">d2itemreader</a>
+		</div>
+	</li>
+</ul>
 <h3><a href="http://www.dontstarvegame.com/" class="info-link">Don't Starve</a> Mods</h3>
 <ul class="project-list">
 	<li class="home-card">
@@ -151,11 +164,6 @@
 </ul>
 <h3>Lua</h3>
 <ul class="project-list">
-	<li class="home-card">
-		<div class="stack">
-			<a class="content" href="https://github.com/squeek502/d2info">d2info</a>
-		</div>
-	</li>
 	<li class="home-card">
 		<div class="stack">
 			<a class="content" href="https://github.com/squeek502/luver">luver</a>
