Add link to luvit

--- a/pages/index.html
+++ b/pages/index.html
@@ -166,6 +166,12 @@
 <ul class="project-list">
 	<li class="home-card">
 		<div class="stack">
+			<a class="content" href="https://github.com/luvit">Luvit</a>
+			<div class="action">Contributor</div>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="stack">
 			<a class="content" href="https://github.com/squeek502/luver">luver</a>
 		</div>
 	</li>
