--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,7 +4,7 @@
 <h3><a href="/{{{url}}}">{{{title}}}</a></h3>
 <time>{{date}}</time>
 {{#categoryDisplay}}
- - <a href="/categories/{{{url}}}">{{category}}</a>
+ - <a href="/{{{url}}}">{{category}}</a>
 {{/categoryDisplay}}
 </div>
 {{/site.posts}}
