Reorganize/update home page

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,5 +1,5 @@
 <div class="latest-blog">
-	<h2>from the blog...</h2>
+	<h2>featured posts from the blog...</h2>
 	{{#site.featured}}
 	<div class="blog"><a href="/{{{url}}}">{{{title}}}</a> from <time>{{date}}</time></div>
 	{{/site.featured}}
@@ -7,7 +7,7 @@
 	<div class="blog">No blog posts yet</div>
 	{{/site.featured}}
 </div>
-<h2>Game Development</h2>
+<h3>Game Development</h3>
 <ul class="project-list">
 	<li class="home-card">
 		<div class="media"><img src="images/fortressforever.png" /></div>
@@ -18,30 +18,6 @@
 </ul>
 <h3><a href="https://minecraft.net/" class="info-link">Minecraft</a> Mods</h3>
 <ul class="project-list">
-	<li class="home-card">
-		<div class="media"><img src="images/thespiceoflife.png" /></div>
-		<div class="stack">
-			<a class="content" href="https://minecraft.curseforge.com/projects/the-spice-of-life">The Spice of Life</a>
-		</div>
-	</li>
-	<li class="home-card">
-		<div class="media"><img src="images/tictooltips.png" /></div>
-		<div class="stack">
-			<a class="content" href="https://minecraft.curseforge.com/projects/tic-tooltips">TiC Tooltips</a>
-		</div>
-	</li>
-	<li class="home-card">
-		<div class="media"><img src="images/wailaharvestability.png" /></div>
-		<div class="stack">
-			<a class="content" href="https://minecraft.curseforge.com/projects/waila-harvestability">Waila Harvestability</a>
-		</div>
-	</li>
-	<li class="home-card">
-		<div class="media"><img src="images/veganoption.png" /></div>
-		<div class="stack">
-			<a class="content" href="https://minecraft.curseforge.com/projects/the-vegan-option">The Vegan Option</a>
-		</div>
-	</li>
 	<li class="home-card">
 		<div class="media"><img src="images/appleskin.png" /></div>
 		<div class="stack">
@@ -55,16 +31,15 @@
 		</div>
 	</li>
 	<li class="home-card">
-		<div class="media"><img src="images/hungeroverhaul.png" /></div>
+		<div class="media"><img src="images/thespiceoflife.png" /></div>
 		<div class="stack">
-			<a class="content" href="https://minecraft.curseforge.com/projects/hunger-overhaul">Hunger Overhaul</a>
-			<div class="action">Contributor</div>
+			<a class="content" href="https://minecraft.curseforge.com/projects/the-spice-of-life">The Spice of Life</a>
 		</div>
 	</li>
 	<li class="home-card">
-		<div class="media"><img src="images/creativeblocks.png" /></div>
+		<div class="media"><img src="images/wailaharvestability.png" /></div>
 		<div class="stack">
-			<a class="content" href="https://minecraft.curseforge.com/projects/creative-blocks">Creative Blocks</a>
+			<a class="content" href="https://minecraft.curseforge.com/projects/waila-harvestability">Waila Harvestability</a>
 		</div>
 	</li>
 	<li class="home-card">
@@ -80,9 +55,34 @@
 		</div>
 	</li>
 	<li class="home-card">
+		<div class="media"><img src="images/veganoption.png" /></div>
+		<div class="stack">
+			<a class="content" href="https://minecraft.curseforge.com/projects/the-vegan-option">The Vegan Option</a>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="media"><img src="images/hungeroverhaul.png" /></div>
+		<div class="stack">
+			<a class="content" href="https://minecraft.curseforge.com/projects/hunger-overhaul">Hunger Overhaul</a>
+			<div class="action">Contributor</div>
+		</div>
+	</li>
+	<li class="home-card">
 		<div class="media"><img src="images/hungerinpeace.png" /></div>
 		<div class="stack">
 			<a class="content" href="https://minecraft.curseforge.com/projects/hunger-in-peace">Hunger In Peace</a>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="media"><img src="images/tictooltips.png" /></div>
+		<div class="stack">
+			<a class="content" href="https://minecraft.curseforge.com/projects/tic-tooltips">TiC Tooltips</a>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="media"><img src="images/creativeblocks.png" /></div>
+		<div class="stack">
+			<a class="content" href="https://minecraft.curseforge.com/projects/creative-blocks">Creative Blocks</a>
 		</div>
 	</li>
 	<li class="home-card">
@@ -138,6 +138,35 @@
 		</div>
 	</li>
 </ul>
+<h3>Lua</h3>
+<ul class="project-list">
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/luvit">Luv / Luvi / Luvit</a>
+			<div class="action">Contributor</div>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/luver">luver</a>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/sleep">sleep</a>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/memreader">memreader</a>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/lua-arbitrary-binary-string">arbitrary-binary-string</a>
+		</div>
+	</li>
+</ul>
 <h3><a href="http://www.dontstarvegame.com/" class="info-link">Don't Starve</a> Mods</h3>
 <ul class="project-list">
 	<li class="home-card">
@@ -162,27 +191,12 @@
 		</div>
 	</li>
 </ul>
-<h3>Lua</h3>
+<h3>Misc</h3>
 <ul class="project-list">
 	<li class="home-card">
 		<div class="stack">
-			<a class="content" href="https://github.com/luvit">Luvit</a>
-			<div class="action">Contributor</div>
-		</div>
-	</li>
-	<li class="home-card">
-		<div class="stack">
-			<a class="content" href="https://github.com/squeek502/luver">luver</a>
-		</div>
-	</li>
-	<li class="home-card">
-		<div class="stack">
-			<a class="content" href="https://github.com/squeek502/sleep">sleep</a>
-		</div>
-	</li>
-	<li class="home-card">
-		<div class="stack">
-			<a class="content" href="https://github.com/squeek502/memreader">memreader</a>
+			<a class="content" href="https://github.com/squeek502/userscripts">Userscripts</a>
+			<div class="action">for Bandcamp</div>
 		</div>
 	</li>
 </ul>
