--- a/pages/index.html
+++ b/pages/index.html
@@ -142,7 +142,7 @@
 		</div>
 	</li>
 </ul>
-<h3>Lua</h3>
+<h3><a href="https://lua.org/" class="info-link">Lua</a></h3>
 <ul class="project-list">
 	<li class="home-card">
 		<div class="stack">
@@ -168,6 +168,52 @@
 	<li class="home-card">
 		<div class="stack">
 			<a class="content" href="https://github.com/squeek502/lua-arbitrary-binary-string">arbitrary-binary-string</a>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/lua-windcon">windcon</a>
+		</div>
+	</li>
+</ul>
+<h3><a href="https://ziglang.org/" class="info-link">Zig</a></h3>
+<ul class="project-list">
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/watchedoverlay">watchedoverlay</a>
+			<div class="action">shell extension for Windows</div>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/zig-unidecode">zig-unidecode</a>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/zig-std-lib-fuzzing">zig-std-lib-fuzzing</a>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/zigescape">zigescape</a>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/grindcov">grindcov</a>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/zua">zua</a>
+			<div class="action">work-in-progress</div>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/audiometa">audiometa</a>
+			<div class="action">work-in-progress</div>
 		</div>
 	</li>
 </ul>
