--- a/pages/index.html
+++ b/pages/index.html
@@ -20,6 +20,88 @@
 		</div>
 	</li>
 </ul>
+<h3><a href="https://ziglang.org/" class="info-link">Zig</a></h3>
+<ul class="project-list">
+	<li class="home-card">
+		<div class="media"><img src="images/resinator-dynamic.svg" style="opacity: 0.75;" /></div>
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/resinator">resinator</a>
+			<div class="action">cross-platform Windows Resource compiler</div>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/watchedoverlay">watchedoverlay</a>
+			<div class="action">shell extension for Windows</div>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/zig-unidecode">zig-unidecode</a>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/zig-std-lib-fuzzing">zig-std-lib-fuzzing</a>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/zigescape">zigescape</a>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/grindcov">grindcov</a>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/zua">zua</a>
+			<div class="action">work-in-progress</div>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/audiometa">audiometa</a>
+			<div class="action">work-in-progress</div>
+		</div>
+	</li>
+</ul>
+<h3><a href="https://lua.org/" class="info-link">Lua</a></h3>
+<ul class="project-list">
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/luvit">Luv / Luvi / Luvit</a>
+			<div class="action">Contributor</div>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/luver">luver</a>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/sleep">sleep</a>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/memreader">memreader</a>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/lua-arbitrary-binary-string">arbitrary-binary-string</a>
+		</div>
+	</li>
+	<li class="home-card">
+		<div class="stack">
+			<a class="content" href="https://github.com/squeek502/lua-windcon">windcon</a>
+		</div>
+	</li>
+</ul>
 <h3><a href="https://minecraft.net/" class="info-link">Minecraft</a> Mods</h3>
 <ul class="project-list">
 	<li class="home-card">
@@ -139,81 +221,6 @@
 	<li class="home-card">
 		<div class="stack">
 			<a class="content" href="https://github.com/squeek502/d2itemreader">d2itemreader</a>
-		</div>
-	</li>
-</ul>
-<h3><a href="https://lua.org/" class="info-link">Lua</a></h3>
-<ul class="project-list">
-	<li class="home-card">
-		<div class="stack">
-			<a class="content" href="https://github.com/luvit">Luv / Luvi / Luvit</a>
-			<div class="action">Contributor</div>
-		</div>
-	</li>
-	<li class="home-card">
-		<div class="stack">
-			<a class="content" href="https://github.com/squeek502/luver">luver</a>
-		</div>
-	</li>
-	<li class="home-card">
-		<div class="stack">
-			<a class="content" href="https://github.com/squeek502/sleep">sleep</a>
-		</div>
-	</li>
-	<li class="home-card">
-		<div class="stack">
-			<a class="content" href="https://github.com/squeek502/memreader">memreader</a>
-		</div>
-	</li>
-	<li class="home-card">
-		<div class="stack">
-			<a class="content" href="https://github.com/squeek502/lua-arbitrary-binary-string">arbitrary-binary-string</a>
-		</div>
-	</li>
-	<li class="home-card">
-		<div class="stack">
-			<a class="content" href="https://github.com/squeek502/lua-windcon">windcon</a>
-		</div>
-	</li>
-</ul>
-<h3><a href="https://ziglang.org/" class="info-link">Zig</a></h3>
-<ul class="project-list">
-	<li class="home-card">
-		<div class="stack">
-			<a class="content" href="https://github.com/squeek502/watchedoverlay">watchedoverlay</a>
-			<div class="action">shell extension for Windows</div>
-		</div>
-	</li>
-	<li class="home-card">
-		<div class="stack">
-			<a class="content" href="https://github.com/squeek502/zig-unidecode">zig-unidecode</a>
-		</div>
-	</li>
-	<li class="home-card">
-		<div class="stack">
-			<a class="content" href="https://github.com/squeek502/zig-std-lib-fuzzing">zig-std-lib-fuzzing</a>
-		</div>
-	</li>
-	<li class="home-card">
-		<div class="stack">
-			<a class="content" href="https://github.com/squeek502/zigescape">zigescape</a>
-		</div>
-	</li>
-	<li class="home-card">
-		<div class="stack">
-			<a class="content" href="https://github.com/squeek502/grindcov">grindcov</a>
-		</div>
-	</li>
-	<li class="home-card">
-		<div class="stack">
-			<a class="content" href="https://github.com/squeek502/zua">zua</a>
-			<div class="action">work-in-progress</div>
-		</div>
-	</li>
-	<li class="home-card">
-		<div class="stack">
-			<a class="content" href="https://github.com/squeek502/audiometa">audiometa</a>
-			<div class="action">work-in-progress</div>
 		</div>
 	</li>
 </ul>
